# foto_cleaner

./: .gitignore  README.md  pyproject.toml  scanner.py  thumbnailer.py  ui_main.py
src/foto_cleaner/: ops.py  scanner.py  thumbnailer.py  ui_main.py
